# YM-clone

./: README.md  pyproject.toml
.github/workflows/: check.yml
backend/: .gitignore  README.md  pyproject.toml  setup.cfg
backend/.github/workflows/: check.yml
backend/api/: main.py
backend/api/database/: connection.py  crud.py  store.db  uow.py
backend/api/models/: albums.py  artists.py  playlists.py  songs.py  users.py
backend/api/routes/: albums.py  songs.py  users.py
backend/api/services/: logger.py  songs.py  users.py
backend/api/tests/: test_simple.py
